[package]
name = "rust_edu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.4"
regex = "1.10.2"
log = { version = "^0.4", default-features = false, features = ["std"] }
chrono = { version = "^0.4.24", default-features = false, features = ["std"] }
# clap = { version = "^4.3.8", features = [ "cargo" ] }
byteorder = "^1.3"
rusty-leveldb = "3.0.0"
dirs = "^5.0.0"
bitcoin = "0.32.1"
rayon = "^1.3"
seek_bufread = "^1.2.2"
num = "0.4.1"

[dev-dependencies]
tempfile =  "^3.6.0"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0                # Controls the --opt-level the compiler builds with
debug = true                 # Controls whether the compiler passes `-g`
rpath = false                # Controls whether the compiler passes `-C rpath`
lto = false                  # Controls `-C lto` for binaries and staticlibs
debug-assertions = true      # Controls whether debug assertions are enabled
codegen-units = 1            # Controls whether the compiler passes `-C codegen-units`
                             # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1


[[bin]]
name = "rust_edu"
path = "src/main.rs"